# MPVGE

./: CMakeLists.txt  Dependencies.cmake  ProjectOptions.cmake
.github/: constants.env
cmake/: Cache.cmake  CompilerWarnings.cmake  Cuda.cmake  Doxygen.cmake  Hardening.cmake  InterproceduralOptimization.cmake  LibFuzzer.cmake  Linker.cmake  PackageProject.cmake  PreventInSourceBuilds.cmake  Sanitizers.cmake  StaticAnalyzers.cmake  Tests.cmake
configured_files/: config.hpp.in
include/MPVGE/: Application.hpp  DebugUtil.hpp  Device.cpp  Device.hpp  DeviceInfo.hpp  Instance.hpp  Model.cpp  Model.hpp  Monitor.hpp  QueueFamilyIndices.hpp  RenderPipeline.hpp  Surface.hpp  SwapChain.cpp  SwapChain.hpp  VulkanObjectType.hpp  Window.hpp  headers.hpp  mpvge_lib.hpp  sample_library.hpp  vulkanToString.hpp
include/mpvge_lib_core/: mpvge_lib_core.hpp
shaders/: simple_shader.frag
src/: CMakeLists.txt
src/ftxui_sample/: CMakeLists.txt  main.cpp
src/mpvge/: CMakeLists.txt  main.cpp
src/mpvge_lib/: Application.cpp  CMakeLists.txt  Device.cpp  FPSCounter.cpp  Instance.cpp  Model.cpp  Monitor.cpp  QueueFamilyIndices.cpp  RenderPipeline.cpp  Surface.cpp  SwapChain.cpp  Window.cpp  mpvge_lib.cpp
src/mpvge_lib_core/: CMakeLists.txt  mpvge_lib_core.cpp
src/sample_library/: CMakeLists.txt  sample_library.cpp
test/: CMakeLists.txt  constexpr_tests.cpp  tests.cpp
